BoaUAT/src/objects/BOM_Line_Item__c.object
<CustomObject>
    <description>Stored kit set type of products in SF.</description>
    <fields>
        <fullName>Additional_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Angle__c</fullName>
        <label>Angle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>135</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>225</fullName>
                </value>
                <value>
                    <fullName>270</fullName>
                </value>
                <value>
                    <fullName>315</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crimp_Size__c</fullName>
        <label>Crimp Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pack__c</fullName>
        <label>Pack</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Metre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
                <value>
                    <fullName>Spiral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEQNO_EXO__c</fullName>
        <label>SEQNO (EXO)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seat_Type__c</fullName>
        <label>Seat Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Bill_Of_Material</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ferrules</fullName>
                </value>
                <value>
                    <fullName>Fittings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BOM Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Component Stock Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOM Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>